lnet/utils/lst.c
@@ -927,6 +927,54 @@ lst_add_nodes_ioctl (char *name, int count, lnet_process_id_t *ids,
 }
 
 int
+lst_del_group_ioctl (char *name)
+{
+	lstio_group_del_args_t args = {0};
+
+	args.lstio_grp_key   = session_key;
+	args.lstio_grp_nmlen = strlen(name);
+	args.lstio_grp_namep = name;
+
+	return lst_ioctl(LSTIO_GROUP_DEL, &args, sizeof(args));
+}
+
+int
+lst_del_group(char *grp_name)
+{
+	int	rc;
+
+	rc = lst_del_group_ioctl(grp_name);
+	if (rc == 0) {
+		fprintf(stdout, "Group is deleted\n");
+		return 0;
+	}
+
+	if (rc == -1) {
+		lst_print_error("group", "Failed to delete group: %s\n",
+				strerror(errno));
+		return rc;
+	}
+
+	fprintf(stderr, "Group is deleted with some errors\n");
+
+	if (trans_stat.trs_rpc_errno != 0) {
+		fprintf(stderr,
+			"[RPC] Failed to send %d end session RPCs: %s\n",
+			lstcon_rpc_stat_failure(&trans_stat, 0),
+			strerror(trans_stat.trs_rpc_errno));
+	}
+
+	if (trans_stat.trs_fwk_errno != 0) {
+		fprintf(stderr,
+			"[FWK] Failed to end session on %d nodes: %s\n",
+		lstcon_sesop_stat_failure(&trans_stat, 0),
+		strerror(trans_stat.trs_fwk_errno));
+	}
+
+	return -1;
+}
+
+int
 lst_add_group_ioctl (char *name)
 {
         lstio_group_add_args_t args = {0};
@@ -948,6 +996,7 @@ jt_lst_add_group(int argc, char **argv)
         int                count;
         int                rc;
         int                i;
+	unsigned	   num_group_nodes = 0;
 
         if (session_key == 0) {
                 fprintf(stderr,
@@ -1003,6 +1052,8 @@ jt_lst_add_group(int argc, char **argv)
 
 		fprintf(stdout, "%s are added to session\n", argv[i]);
 
+		num_group_nodes++;
+
 		if ((feats & session_features) != session_features) {
 			fprintf(stdout,
 				"Warning, this session will run with "
@@ -1014,7 +1065,16 @@ jt_lst_add_group(int argc, char **argv)
 		lst_free_rpcent(&head);
 	}
 
-	return 0;
+	if (num_group_nodes == 0) {
+		/*
+		 * The selftest kernel module expects that a group should
+		 * have at least one node, since it doesn't make sense for
+		 * an empty group to be added to a test.
+		 */
+		rc = lst_del_group(name);
+	}
+
+	return rc;
 
 failed:
 	if (rc == -1) {
@@ -1034,19 +1094,11 @@ failed:
 
 	lst_free_rpcent(&head);
 
+	if (num_group_nodes == 0) {
+		rc = lst_del_group(name);
+	}
+
 	return rc;
-}
-
-int
-lst_del_group_ioctl (char *name)
-{
-        lstio_group_del_args_t args = {0};
-
-        args.lstio_grp_key   = session_key;
-        args.lstio_grp_nmlen = strlen(name);
-        args.lstio_grp_namep = name;
-
-        return lst_ioctl(LSTIO_GROUP_DEL, &args, sizeof(args));
 }
 
 int
@@ -1065,34 +1117,9 @@ jt_lst_del_group(int argc, char **argv)
                 return -1;
         }
 
-        rc = lst_del_group_ioctl(argv[1]);
-        if (rc == 0) {
-                fprintf(stdout, "Group is deleted\n");
-                return 0;
-        }
+	rc = lst_del_group(argv[1]);
 
-        if (rc == -1) {
-                lst_print_error("group", "Failed to delete group: %s\n",
-                                strerror(errno));
-                return rc;
-        }
-
-        fprintf(stderr, "Group is deleted with some errors\n");
-
-        if (trans_stat.trs_rpc_errno != 0) {
-                fprintf(stderr, "[RPC] Failed to send %d end session RPCs: %s\n",
-                        lstcon_rpc_stat_failure(&trans_stat, 0),
-                        strerror(trans_stat.trs_rpc_errno));
-        }
-
-        if (trans_stat.trs_fwk_errno != 0) {
-                fprintf(stderr,
-                        "[FWK] Failed to end session on %d nodes: %s\n",
-                        lstcon_sesop_stat_failure(&trans_stat, 0),
-                        strerror(trans_stat.trs_fwk_errno));
-        }
-
-        return -1;
+	return rc;
 }
 
 int
